[package]
name = "yada-bench"
version = "0.1.0"
authors = ["Takuya Asano <takuya.a@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[dev-dependencies]
criterion = "0.3.3"
fnv = "1.0.7"
fst = "0.4.4"
rand = "0.7.3"
yada = { version = "*", path = ".." }

[[bench]]
name = "bench"
harness = false
